--- a/src/nr_deckbuilder.ui
+++ b/src/nr_deckbuilder.ui
@@ -27,9 +27,12 @@
                     <property name="visible">True</property>
                     <property name="label" translatable="yes">_Fichier</property>
                     <property name="use_underline">True</property>
+										<property name="can_focus">False</property>
+										<property name="use_action_appearance">False</property>
                     <child type="submenu">
                       <object class="GtkMenu" id="menu1">
                         <property name="visible">True</property>
+												<property name="can_focus">False</property>
                         <child>
                           <object class="GtkImageMenuItem" id="imagemenuitem1">
                             <property name="label">gtk-new</property>
@@ -38,6 +41,8 @@
                             <property name="use_underline">True</property>
                             <property name="use_stock">True</property>
                             <property name="always_show_image">True</property>
+														<property name="can_focus">False</property>
+														<property name="use_action_appearance">False</property>
                           </object>
                         </child>
                         <child>
@@ -48,6 +53,8 @@
                             <property name="use_underline">True</property>
                             <property name="use_stock">True</property>
                             <property name="always_show_image">True</property>
+														<property name="can_focus">False</property>
+														<property name="use_action_appearance">False</property>
                           </object>
                         </child>
                         <child>
@@ -58,6 +65,8 @@
                             <property name="use_underline">True</property>
                             <property name="use_stock">True</property>
                             <property name="always_show_image">True</property>
+														<property name="can_focus">False</property>
+														<property name="use_action_appearance">False</property>
                           </object>
                         </child>
                         <child>
@@ -68,6 +77,8 @@
                             <property name="use_underline">True</property>
                             <property name="use_stock">True</property>
                             <property name="always_show_image">True</property>
+														<property name="can_focus">False</property>
+														<property name="use_action_appearance">False</property>
                           </object>
                         </child>
                         <child>
@@ -83,6 +94,8 @@
                             <property name="use_underline">True</property>
                             <property name="use_stock">True</property>
                             <property name="always_show_image">True</property>
+														<property name="can_focus">False</property>
+														<property name="use_action_appearance">False</property>
                           </object>
                         </child>
                       </object>
